Added new Welcome view logo per MNT's recommendation. Resolved confused NavigationController stack by changing WPcomLoginViewController to a popup. Fixed various minor bugs related to new Add Blog flow.

--- a/.gitattributes
+++ b/.gitattributes
@@ -285,6 +285,8 @@ WordPress.xcodeproj/project.pbxproj -text
 /license.txt -text
 /lock.png -text
 /logo_stacked.png -text
+/logo_welcome.png -text
+/logo_welcome@2x.png -text
 /logo_wpcom.png -text
 /main.m -text
 /pages.png -text
