Added support for automatic background syncing of blogs. Added WPorg logo for coming changes to EditBlogViewController. Fixed several minor bugs. Cleaned up legacy code here and there.

--- a/.gitattributes
+++ b/.gitattributes
@@ -288,6 +288,7 @@ WordPress.xcodeproj/project.pbxproj -text
 /logo_welcome.png -text
 /logo_welcome@2x.png -text
 /logo_wpcom.png -text
+/logo_wporg.png -text
 /main.m -text
 /pages.png -text
 /pages@2x.png -text
