Improved UX for WordPress.com login. Improved UX for Add Users's Blogs. Increased snappiness between views.

--- a/.gitattributes
+++ b/.gitattributes
@@ -313,6 +313,7 @@ WordPress.xcodeproj/project.pbxproj -text
 /welcome_btn_normal@2x.png -text
 /welcome_btn_over.png -text
 /welcome_btn_over@2x.png -text
+/whitebg.png -text
 /write.png -text
 /write@2x.png -text
 /xhtml1-transitional.dtd -text
