--- a/.gitattributes
+++ b/.gitattributes
@@ -19,6 +19,9 @@ Classes/BlogDataManager.m -text
 Classes/BlogHTTPAuthenticationViewController.h -text
 Classes/BlogHTTPAuthenticationViewController.m -text
 Classes/BlogHTTPAuthenticationViewController.xib -text
+Classes/BlogSettingsViewController.h -text
+Classes/BlogSettingsViewController.m -text
+Classes/BlogSettingsViewController.xib -text
 Classes/BlogSplitViewDetailViewController.h -text
 Classes/BlogSplitViewDetailViewController.m -text
 Classes/BlogSplitViewDetailViewController.xib -text
@@ -130,6 +133,10 @@ Classes/UIImage+INResizeImageAllocator.h -text
 Classes/UIImage+INResizeImageAllocator.m -text
 Classes/UITableViewActivityCell.h -text
 Classes/UITableViewActivityCell.m -text
+Classes/UITableViewSegmentedControlCell.h -text
+Classes/UITableViewSegmentedControlCell.m -text
+Classes/UITableViewSwitchCell.h -text
+Classes/UITableViewSwitchCell.m -text
 Classes/UIViewController+WPAnimation.h -text
 Classes/UIViewController+WPAnimation.m -text
 Classes/UIViewController_iPadExtensions.h -text
@@ -249,6 +256,8 @@ Resources-iPad/MainWindow-iPad.xib -text
 /ToolbarIconGear.png -text svneol=unset#unset
 /ToolbarIconLocation.png -text svneol=unset#unset
 /UITableViewActivityCell.xib -text
+/UITableViewSegmentedControlCell.xib -text
+/UITableViewSwitchCell.xib -text
 /WPAddCategoryViewController.xib -text
 /WPCategoriesController.xib -text
 /WPPhotoViewController.xib -text
