Adding sample.mov in case we need to use the less-desired/non-XMLRPC method to determine if WPcom users have VideoPress.

--- a/.gitattributes
+++ b/.gitattributes
@@ -310,6 +310,7 @@ WordPress.xcodeproj/project.pbxproj -text
 /posts@2x.png -text
 /preview.png -text
 /preview@2x.png -text
+/sample.mov -text
 /settings.png -text
 /settings@2x.png -text
 /sync.png -text svneol=unset#unset
