--- a/.gitattributes
+++ b/.gitattributes
@@ -95,6 +95,9 @@ Classes/PostAnnotation.m -text
 Classes/PostLocationViewController.h -text
 Classes/PostLocationViewController.m -text
 Classes/PostLocationViewController.xib -text
+Classes/PostMediaEditViewController.h -text
+Classes/PostMediaEditViewController.m -text
+Classes/PostMediaEditViewController.xib -text
 Classes/PostMediaViewController.h -text
 Classes/PostMediaViewController.m -text
 Classes/PostMediaViewController.xib -text
