--- a/.gitattributes
+++ b/.gitattributes
@@ -94,6 +94,9 @@ Classes/CommentsTableViewDelegate.h -text
 Classes/CommentsViewController.h -text
 Classes/CommentsViewController.m -text
 Classes/Constants.h -text
+Classes/CrashReportView.xib -text
+Classes/CrashReportViewController.h -text
+Classes/CrashReportViewController.m -text
 Classes/DashboardViewController.h -text
 Classes/DashboardViewController.m -text
 Classes/DraftManager.h -text
