--- a/.gitattributes
+++ b/.gitattributes
@@ -97,6 +97,24 @@ Classes/Constants.h -text
 Classes/CrashReportView.xib -text
 Classes/CrashReportViewController.h -text
 Classes/CrashReportViewController.m -text
+Classes/CrashReporter.framework/CrashReporter -text
+Classes/CrashReporter.framework/Headers -text
+Classes/CrashReporter.framework/Resources -text
+Classes/CrashReporter.framework/Versions/A/CrashReporter -text
+Classes/CrashReporter.framework/Versions/A/Headers/CrashReporter.h -text
+Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReport.h -text
+Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportApplicationInfo.h -text
+Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportBinaryImageInfo.h -text
+Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportExceptionInfo.h -text
+Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportFormatter.h -text
+Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportProcessInfo.h -text
+Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportSignalInfo.h -text
+Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportSystemInfo.h -text
+Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportTextFormatter.h -text
+Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReportThreadInfo.h -text
+Classes/CrashReporter.framework/Versions/A/Headers/PLCrashReporter.h -text
+Classes/CrashReporter.framework/Versions/A/Resources/Info.plist -text
+Classes/CrashReporter.framework/Versions/Current -text
 Classes/DashboardViewController.h -text
 Classes/DashboardViewController.m -text
 Classes/DraftManager.h -text
