added "Show more..." section footers to the stats UITableView

--- a/.gitattributes
+++ b/.gitattributes
@@ -331,6 +331,7 @@ Resources-iPad/MainWindow-iPad.xib -text
 /RoundedRectBlack.png -text
 Settings.bundle/Root.plist -text
 Settings.bundle/en.lproj/Root.strings -text
+/StatsTableViewController-iPad.xib -text
 /ToolbarIconCamera.png -text svneol=unset#unset
 /ToolbarIconEye.png -text svneol=unset#unset
 /ToolbarIconGear.png -text svneol=unset#unset
