Fixes trac #466 without using a hack

--- a/.gitattributes
+++ b/.gitattributes
@@ -20,6 +20,7 @@
 /AddSiteViewController-iPad.xib -text
 /AddUsersBlogsViewController-iPad.xib -text
 /BlogSettingsView-iPad.xib -text
+/BlogSettingsViewController-iPad.xib -text
 /BlogViewController-iPad.xib -text
 /BlogViewController.xib -text
 /CTidy.h -text
