Added danilo's patch to prevent the NSXMLParserErrorDomain on .ORG sites. fixes #570

--- a/.gitattributes
+++ b/.gitattributes
@@ -390,6 +390,58 @@ WordPress.xcodeproj/project.pbxproj -text
 /backNav@2x.png -text
 /backNavd.png -text
 /backNavd@2x.png -text
+c_tidy/access.c -text
+c_tidy/access.h -text
+c_tidy/alloc.c -text
+c_tidy/attrask.c -text
+c_tidy/attrdict.c -text
+c_tidy/attrdict.h -text
+c_tidy/attrget.c -text
+c_tidy/attrs.c -text
+c_tidy/attrs.h -text
+c_tidy/buffio.c -text
+c_tidy/buffio.h -text
+c_tidy/charsets.c -text
+c_tidy/charsets.h -text
+c_tidy/clean.c -text
+c_tidy/clean.h -text
+c_tidy/config.c -text
+c_tidy/config.h -text
+c_tidy/entities.c -text
+c_tidy/entities.h -text
+c_tidy/fileio.c -text
+c_tidy/fileio.h -text
+c_tidy/forward.h -text
+c_tidy/iconvtc.c -text
+c_tidy/iconvtc.h -text
+c_tidy/istack.c -text
+c_tidy/lexer.c -text
+c_tidy/lexer.h -text
+c_tidy/localize.c -text
+c_tidy/mappedio.c -text
+c_tidy/mappedio.h -text
+c_tidy/message.h -text
+c_tidy/parser.c -text
+c_tidy/parser.h -text
+c_tidy/platform.h -text
+c_tidy/pprint.c -text
+c_tidy/pprint.h -text
+c_tidy/streamio.c -text
+c_tidy/streamio.h -text
+c_tidy/tagask.c -text
+c_tidy/tags.c -text
+c_tidy/tags.h -text
+c_tidy/tidy-int.h -text
+c_tidy/tidy.h -text
+c_tidy/tidyenum.h -text
+c_tidy/tidylib.c -text
+c_tidy/tmbstr.c -text
+c_tidy/tmbstr.h -text
+c_tidy/utf8.c -text
+c_tidy/utf8.h -text
+c_tidy/version.h -text
+c_tidy/win32tc.c -text
+c_tidy/win32tc.h -text
 /category_child.png -text
 /category_child@2x.png -text
 /chart.png -text
